Escribi un poquito de codigo para practicar CSS

--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Aprendiendo CSS con @SoyDalton</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="normalize.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-
-    </head>
-    <body>
-        <div class="caja-fixed">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, laboriosam assumenda animi excepturi non earum quibusdam ad pariatur praesentium porro sunt beatae explicabo dolores. Molestias magnam repellendus ab recusandae minima.
-        </div>
-        <div class="texto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eius ut mollitia qui explicabo maxime, assumenda reprehenderit fugit earum repellat. Aliquam repellendus eius eum repudiandae nemo iure laborum. Quia, inventore!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus consectetur commodi quis autem, voluptatum aperiam! Praesentium accusantium eaque minima quaerat officia ipsa harum, culpa molestias, voluptatem commodi, quam mollitia consequuntur.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, et! In iste laboriosam error iure sint magnam, consequatur vero quas nisi ex blanditiis doloremque fuga corporis quos minima animi repellendus.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione minima magnam debitis, temporibus explicabo error vitae esse distinctio quia, animi accusantium aperiam asperiores eligendi amet modi minus. Officiis, quas adipisci?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et id quasi totam, recusandae facere soluta. Fuga esse eligendi, repellat earum nostrum quasi! Dolor nam nostrum provident assumenda culpa, similique distinctio!
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat eum voluptas voluptate ratione accusamus molestias voluptates dolore animi, commodi doloremque architecto quaerat distinctio rerum explicabo error temporibus, nihil cumque modi.
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0e048d0fe9.js" crossorigin="anonymous"></script>
+    <title>Vamos a hacer un menu responsive</title>
     
-    </html>
+</head>
+
+<body>
+    <div class="flex-container">
+        <form class="form" action="">
+            <div class="form__section">
+                <input class="form__input" type="text" placeholder="Email">
+            </div>
+            <div class="form__section">
+                <input class="form__input" type="email" placeholder="Asunto">
+            </div>
+            <div class="form__section">
+                <textarea class="form__input" placeholder="Escriba su mensaje"></textarea>
+            </div>
+            <div class="form__section">
+                <input type="submit" class="form__input">
+            </div>
+        </form>
+        <div class="form-img">
+            <div class="img-container">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Wikipe-tan_GothLoli.png/800px-Wikipe-tan_GothLoli.png" alt="">
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
